--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,4 @@ set(CMAKE_CXX_STANDARD 14)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp")
 
-add_executable(fh_ppr_mandelbrot main.cpp)
+add_executable(fh_ppr_mandelbrot main.cpp tga.cpp tga.h)
